[gd_scene load_steps=3 format=3 uid="uid://bxg60dihwxco"]

[ext_resource type="Script" uid="uid://b6nxe3uefxga2" path="res://scripts/win_screen.gd" id="1_erk2x"]
[ext_resource type="Texture2D" uid="uid://cvrhqdrrrs22o" path="res://assets/sprites/background.png" id="1_wv5lq"]

[node name="WinScreen" type="CanvasLayer"]
script = ExtResource("1_erk2x")
metadata/_edit_horizontal_guides_ = [-1.0]

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1154.0
offset_bottom = 646.0
texture = ExtResource("1_wv5lq")
expand_mode = 1

[node name="Label" type="Label" parent="."]
offset_left = 482.0
offset_top = 140.0
offset_right = 694.0
offset_bottom = 209.0
theme_override_font_sizes/font_size = 50
text = "You Win!"

[node name="Button" type="Button" parent="."]
offset_left = 499.0
offset_top = 269.0
offset_right = 674.0
offset_bottom = 319.0
theme_override_font_sizes/font_size = 30
text = "Restart"

[node name="Button3" type="Button" parent="."]
offset_left = 500.0
offset_top = 358.0
offset_right = 674.0
offset_bottom = 408.0
theme_override_font_sizes/font_size = 30
text = "Main Menu
"

[node name="Button2" type="Button" parent="."]
offset_left = 499.0
offset_top = 446.0
offset_right = 674.0
offset_bottom = 496.0
theme_override_font_sizes/font_size = 30
text = "Quit"

[connection signal="pressed" from="Button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_quit_button_pressed"]
